<resources>
    <string name="app_name">LB_App</string>
    <string name="main_menu">Main Menu</string>
    <string name="hive_activity">Hive Activity</string>
    <string name="sales">Sales</string>
    <string name="expenditure">Expenditure</string>
    <string name="hive_map">Hive Map</string>
    <string name="id">ID:</string>
    <string name="hive_id">HIVE ID:</string>
    <string name="date">DATE:</string>
    <string name="hive_status">HIVE STATUS:</string>
    <string name="frames"># FRAMES:</string>
    <string name="population">POPULATION:</string>
    <string name="location">LOCATION:</string>
    <string name="notes">NOTES:</string>
    <string name="insert">Insert</string>
    <string name="clear">Clear</string>
    <string name="button">Button</string>
    <string name="map_input">Map Input</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="total">Total</string>
    <string name="price">Price:</string>
    <string name="amount">Amount:</string>
    <string name="description">Description:</string>
    <string name="trans_id">Trans_ID:</string>
    <string name="Export">export</string>
    <string name="search_history">Search History</string>
    <string name="create_new_event">Create new event</string>
    <string name="WEATHER">weather</string>
    <string name="TEMPERATURE">temperature</string>
    <string name="check_forecast">Check Weather Forecast</string>
    <string name="otro_producto">Otro Producto</string>
    <string name="update_record">Update Record</string>
    <string name="delete">Delete</string>
    <string name="harvest_records">Harvest Records</string>
    <string name="title_activity_main10">MainActivity10</string>
    <string name="lyn_bee_s_honey_comb_8_floz">Lyn Bee´s Honey+ Comb 8 floz</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="make_transaction">Make transaction</string>
    <string name="export">Export</string>
    <string name="export_sales_history_to_xls_file">Export sales history to excel file</string>
    <string name="review_sales_history">Review Sales History</string>
    <string name="register_new_expense_record">Register New Expense Record</string>
    <string name="main_menu1">Main Menu</string>
    <string name="go_to_hive_activity_records">Go to Hive Activity Records</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="register_new_activity">Register new Activity</string>
    <string name="view_harvest_records">View Harvest Records</string>
    <string name="map">Map</string>
    <string name="go_to_map">Go to Map</string>
    <string name="activity_planner">Activity Planner</string>
    <string name="hive_tracker">Hive Tracker</string>
    <string name="data_registry">DATA REGISTRY</string>
    <string name="frames_">FRAMES</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="search">Search</string>
    <string name="clear_fields">Clear Fields</string>
    <string name="comment">Comment</string>
    <string name="send_reciept">Send Receipt</string>
    <string name="make_payment">Make Payment</string>
    <string name="datelc">Date</string>
    <string name="noteslc">Notes:</string>
    <string name="price_xcd">Price (XCD):</string>
    <string name="other_product">Other Product</string>
    <string name="_100_pure_honey_with_honey_comb">100% Pure Honey With Honey Comb</string>
    <string name="honey_comb">Honey+Comb</string>
    <string name="_19_45">$19.45</string>
    <string name="main_presentation_that_is_a_great_gift_for_any_occasion">Main presentation that is a great gift for any occasion.</string>
    <string name="raw_honey_comb">Raw honey comb</string>
    <string name="_10_45">$10.45</string>
    <string name="raw_honey_comb_straight_from_hive">Raw honey comb straight from hive.</string>
    <string name="update_data">Update data</string>
    <string name="hive_location">Hive Location:</string>
    <string name="update_hive_location">Update Hive Location</string>
    <string name="sales_history">Sales History</string>
    <string name="expenditure_history">Expenditure History</string>
    <string name="products">Products</string>
    <string name="view_expenditure_history">View Expenditure History</string>
    <string name="view_hive_records">View Hive Records</string>
    <string name="create_new_harvest_record">Create New Harvest Record</string>
    <string name="go_to_hive_activity">Go to Hive Activity</string>
    <string name="insert_new_activity">Insert New Activity</string>
    <string name="new_sales_transaction">New Sales Transaction</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="general_hive_stat">OVERALL HIVE PERFORMANCE:</string>
    <string name="general_stat">Hive Performance:</string>
    <string name="inspection_summary">Inspection Summary</string>
    <string name="hive_inspection_report">Hive Inspection Report</string>
    <string name="honey_harvest_report">Honey Harvest Report</string>
    <string name="review_production_summary">Review Production Summary</string>
    <string name="delete_record">Delete Record</string>
    <string name="new_expense_record">New Expense Record</string>
    <string name="to_hive_activity">Go to Hive Activity</string>
    <string name="view_sales_history">View Sales History</string>
    <string name="view_products">View Products</string>
    <string name="export_to_xls_file">Export to xls File</string>

</resources>