<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:text="@string/id"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/id2"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/id"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="51dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:text="@string/trans_id"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/transid"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/trans_id"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView36"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:text="@string/datelc"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/date2"
            android:layout_width="241dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/datelc"
            android:inputType="textPersonName"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView38"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:text="@string/description"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/descrip2"
            android:layout_width="268dp"
            android:layout_height="match_parent"
            android:hint="@string/description"
            android:inputType="textPersonName"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView40"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:text="@string/amount"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/amt2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/amount"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView45"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:text="@string/price"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/price2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/price"
            android:inputType="textPersonName"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView47"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:text="@string/total"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/total2"
            android:layout_width="314dp"
            android:layout_height="match_parent"
            android:hint="@string/total"
            android:inputType="textPersonName"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView49"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:text="@string/notes"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/coment"
            android:layout_width="290dp"
            android:layout_height="match_parent"
            android:hint="@string/noteslc"
            android:inputType="textPersonName"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/insert2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:text="@string/insert"
            android:textColor="@color/black" />

        <Space
            android:layout_width="12dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/search2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:text="@string/search"
            android:textColor="@color/black" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/update2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:text="@string/update"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/delete1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:text="@string/delete"
            android:textColor="@color/black" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/clear2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:text="@string/clear_fields"
            android:textColor="@color/black" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/send2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="@font/alice"
        android:text="@string/send_reciept"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/pay"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:fontFamily="@font/alice"
        android:text="@string/make_payment"
        android:textColor="@color/black" />

    <WebView
        android:id="@+id/webv1"
        android:layout_width="match_parent"
        android:layout_height="12dp" />

</LinearLayout>