<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Yellow86"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:fontFamily="@font/alice"
        android:text="@string/data_registry"
        android:textAlignment="center"
        android:textColor="@color/LBYellow_700"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:text="@string/id"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/id"
            android:layout_width="84dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="@string/id"
            android:hint="@string/id"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="5dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:text="@string/hive_id"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/hivid"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/hive_id"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/date6"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/date"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:text="@string/frames"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/frames"
            android:layout_width="127dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/frames_"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:text="@string/hive_status"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/hivstat"
            android:layout_width="243dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/hive_status"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="19dp"
            android:layout_height="53dp"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:text="@string/population"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/popu"
            android:layout_width="173dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/population"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView65"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:text="@string/general_hive_stat"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/ghivestat2"
            android:layout_width="201dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/general_hive_stat"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:text="@string/location"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/location"
            android:layout_width="270dp"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:hint="@string/location"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:text="@string/notes"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/notes"
            android:layout_width="270dp"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:hint="@string/notes"
            android:inputType="textPersonName"
            android:textSize="12sp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/insert"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:text="@string/create"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" />

        <Button
            android:id="@+id/leer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:text="@string/search"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" />

        <Button
            android:id="@+id/actualizar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:text="@string/update"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/limpiar"
            android:layout_width="22dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/alice"
            android:text="@string/clear_fields"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


    </LinearLayout>

</LinearLayout>