<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView53"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/id" />

        <EditText
            android:id="@+id/id7"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView55"
            android:layout_width="11dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hive_id" />

        <EditText
            android:id="@+id/hiveid7"
            android:layout_width="94dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView57"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/date" />

        <EditText
            android:id="@+id/date7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView59"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/amount" />

        <EditText
            android:id="@+id/amount7"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView61"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Other Product" />

        <EditText
            android:id="@+id/other7"
            android:layout_width="112dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView64"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/amount" />

        <EditText
            android:id="@+id/amount8"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView67"
            android:layout_width="4dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/notes" />

        <EditText
            android:id="@+id/notes8"
            android:layout_width="206dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="textPersonName" />
    </LinearLayout>

    <Button
        android:id="@+id/btnupdate8"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:fontFamily="@font/alice"
        android:text="@string/update_record" />

</LinearLayout>